--- a/blogskin/css.css
+++ b/blogskin/css.css
@@ -5267,6 +5267,7 @@ box-shadow: 0px 0px 10px #f5deb4,
   color: #0366d6;
   text-decoration: none;
 	width: 100%;
+	font-weight: 600;
 }
 
 #tt-body-page .article-view a:hover {
