--- a/blogskin/css.css
+++ b/blogskin/css.css
@@ -139,6 +139,11 @@ button.btn_menu_toolbar.btn_subscription.following.\#subscribe {
     font-family: "JetBrainsMonoLight"
 }
 
+@font-face {
+    src: url("images/Pretendard-Regular.woff2");
+    font-family: "Pretendard"
+}
+
 /* google translate */
 
 .goog-te-gadget-simple {
@@ -227,10 +232,6 @@ body.dark {
 
 .dark ul.tt_category img {
     filter: invert(100%);
-}
-
-#tt-body-page.dark .article-view p {
-    font-weight: 700;
 }
 
 #tt-body-page.dark .article-view blockquote p {
@@ -358,7 +359,7 @@ dark .main {
 .dark .article-tag .title-footer,
 .dark .article-page .title-footer,
 .dark .article-type-common .link-category {
-    color: darkgray;
+    color: #aaa;
 }
 
 .dark .area-aside .box-category .tt_category .category_list .link_sub_item {
@@ -930,7 +931,10 @@ html {
 
 #tt-body-page .area-aside {
     margin-top: 0px;
-    font-family:'maplestory';
+}
+
+.area-aside {
+    font-family:'maplestory'; 
 }
 
 
@@ -1935,8 +1939,9 @@ html {
 }
 
 .area-aside .box-profile .text-profile {
-    font-family: "samlip-outline";
+    font-family: 'maplestory';
     max-width: 210px;
+    font-weight: bold;
     margin: 0 auto 36px auto;
     font-size: 25px;
     line-height: 1.54;
@@ -3211,11 +3216,11 @@ html {
 }
 
 .article-header .title-article {
-    font-family: "samlip-outline";
+    font-family: 'Pretendard';
     display: block;
     width: 100%;
     font-size: 40px;
-    font-weight: 400;
+    font-weight: bold;
     overflow: hidden;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
@@ -5065,7 +5070,7 @@ html {
     -webkit-text-size-adjust: 100%;
     line-height: 1.5;
     color: #24292e;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+    font-family: 'Pretendard';
     font-size: 16px;
     line-height: 1.5;
     word-wrap: break-word;
@@ -6022,6 +6027,9 @@ a.toc-link:hover {
 .toc-link.node-name--H1 {
     font-size: large;
     text-shadow: 0 0 10px paleturquoise;
+}
+.dark .toc-link.node-name--H1 {
+    text-shadow: 0 0 10px darkred;
 }
 .toc-link.node-name--H1.is-active-link {
     font-weight: 500;
