--- a/blogskin/css.css
+++ b/blogskin/css.css
@@ -146,9 +146,22 @@ button.btn_menu_toolbar.btn_subscription.following.\#subscribe {
     font-family: "Pretendard"
 }
 
-a:link {
+a:link, #tt-body-page .article-view a {
     text-decoration: none;
+    color: #0366d6;
+    font-weight: 600;
 }
+
+a:link:hover, 
+#tt-body-page .article-view a:hover {
+    color: mediumblue;
+}
+
+.dark a:link:hover, 
+#tt-body-page.dark .article-view a:hover {
+    color: #79abe4;
+}
+
 a:visited {
     color: inherit;
 }
@@ -436,15 +449,6 @@ dark .main {
 .dark .article-reply .box-total a,
 .dark .area-reply .box-content .box-meta strong a {
     color: ghostwhite !important;
-}
-
-#tt-body-page.dark .article-view a:hover {
-    text-decoration: none !important;
-    color: #79abe4 !important;
-}
-
-#tt-body-page.dark .article-view a {
-    color: #0366d6 !important;
 }
 
 #tt-body-page.dark .article-view img {
@@ -1600,8 +1604,7 @@ html {
 /* footer */
 
 #footer {
-    margin-top: 120px;
-    padding: 35px 0 60px 0;
+    padding: 15px 0 30px 0;
     border-top: 1px solid #efefef;
 }
 
@@ -3474,7 +3477,6 @@ html {
 
 /* article-page - 상세페이지 이전다음글  */
 .article-page {
-    margin-bottom: 46px;
     border-bottom: 1px solid #e8e8e8;
 }
 
@@ -3484,7 +3486,7 @@ html {
 
 .article-page ul {
     list-style: none;
-    margin: 0 0 45px 0;
+    margin: 0 0 25px 0;
     padding: 0;
 }
 
@@ -4274,10 +4276,6 @@ html {
 
 .article-view hr {
     margin: 30px 0;
-}
-
-.article-view a {
-    color: #3d62ce;
 }
 
 .article-view a:hover {
@@ -5436,17 +5434,6 @@ html {
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
-}
-
-#tt-body-page .article-view a {
-    color: #0366d6;
-    text-decoration: none;
-    width: 100%;
-    font-weight: 600;
-}
-
-#tt-body-page .article-view a:hover {
-    text-decoration: underline;
 }
 
 #tt-body-page .article-view strong {
