--- a/blogskin/css.css
+++ b/blogskin/css.css
@@ -6546,9 +6546,7 @@ div#chartdiv {
 }
 
 /******************************
-*
-* code block - topbar
-*
+* code block
 ******************************/
 .codeLabel {
     background: linear-gradient(#2c2c2c, #1b1b1b);
@@ -6571,28 +6569,115 @@ div#chartdiv {
 }
 
 .codelang span.language {
-    float: right;
-    color: lightgray;
-}
-
-.codelang span.filename {
     padding-left: 10px;
     font-size: 14px;
 }
 
-.codeLabel .traffic-light {
-    width: 80px;
-    height: 2em;
-    float: left;
-}
-
-#tt-body-page .article-view .codeLabel .traffic-light img {
-    margin-top: 10px !important;
-    margin-left: 15px !important;
-    width: 70% !important;
-    background: none;
-}
-
 .hljs-copy-button:hover {
     cursor: pointer;
+}
+
+.codeLabel .traffic-lights {
+    width: 60px;
+    float: left;
+    margin-left: 20px;
+}
+
+.traffic-light {
+    padding-left:10px;
+}
+.traffic-light:hover {
+    cursor: pointer;
+}
+.traffic-light div {
+    display: inline;
+    padding-left:10px;
+    width:15px;
+    height:15px;
+    background: red;
+    border-radius: 50%;
+}
+
+ .focus .traffic-lights > .traffic-light-close, .traffic-lights:hover > .traffic-light-close, .traffic-lights:active > .traffic-light-close {
+	 background-color: #ff6159;
+}
+ .focus .traffic-lights > .traffic-light-close:active:hover, .traffic-lights:hover > .traffic-light-close:active:hover, .traffic-lights:active > .traffic-light-close:active:hover {
+	 background-color: #bf4942;
+}
+ .focus .traffic-lights > .traffic-light-minimize, .traffic-lights:hover > .traffic-light-minimize, .traffic-lights:active > .traffic-light-minimize {
+	 background-color: #ffbd2e;
+}
+ .focus .traffic-lights > .traffic-light-minimize:active:hover, .traffic-lights:hover > .traffic-light-minimize:active:hover, .traffic-lights:active > .traffic-light-minimize:active:hover {
+	 background-color: #bf8e22;
+}
+ .focus .traffic-lights > .traffic-light-maximize, .traffic-lights:hover > .traffic-light-maximize, .traffic-lights:active > .traffic-light-maximize {
+	 background-color: #28c941;
+}
+ .focus .traffic-lights > .traffic-light-maximize:active:hover, .traffic-lights:hover > .traffic-light-maximize:active:hover, .traffic-lights:active > .traffic-light-maximize:active:hover {
+	 background-color: #1d9730;
+}
+ .traffic-lights > .traffic-light:before, .traffic-lights > .traffic-light:after {
+	 visibility: hidden;
+}
+ .traffic-lights:hover > .traffic-light:before, .traffic-lights:active > .traffic-light:before, .traffic-lights:hover > .traffic-light:after, .traffic-lights:active > .traffic-light:after {
+	 visibility: visible;
+}
+ .traffic-light {
+	 border-radius: 100%;
+	 padding: 0;
+	 height: 12px;
+	 width: 12px;
+	 border: 1px solid rgba(0, 0, 0, 0.06);
+	 margin-right: 5px;
+	 position: relative;
+	 outline: none;
+}
+ .traffic-light:before, .traffic-light:after {
+	 content: '';
+	 position: absolute;
+	 border-radius: 1px;
+	 left: 0;
+	 top: 0;
+	 right: 0;
+	 bottom: 0;
+	 margin: auto;
+}
+ .traffic-light-close:before, .traffic-light-close:after {
+	 background-color: #4d0000;
+	 width: 8px;
+	 height: 1px;
+}
+ .traffic-light-close:before {
+	 transform: rotate(45deg);
+}
+ .traffic-light-close:after {
+	 transform: rotate(-45deg);
+}
+ .traffic-light-close:active:hover:before, .traffic-light-close:active:hover:after {
+	 background-color: #190000;
+}
+ .traffic-light-minimize:before {
+	 background-color: #995700;
+	 width: 8px;
+	 height: 1px;
+}
+ .traffic-light-minimize:active:hover:before {
+	 background-color: #592800;
+}
+ .traffic-light-maximize:before {
+	 background-color: #006500;
+	 width: 6px;
+	 height: 6px;
+}
+ .traffic-light-maximize:after {
+	 background-color: #28c941;
+	 width: 10px;
+	 height: 2px;
+	 transform: rotate(45deg);
+}
+ .traffic-light-maximize:active:hover:before {
+	 background-color: #003200;
+}
+ .traffic-light-maximize:active:hover:after {
+	 background-color: #1d9730;
 }
